// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Forms.TextArea check default default props from Mixins UU5.Forms.InputMixin 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea check default default props from Mixins UU5.Forms.TextArea Common.Mixins 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea check default default props from Mixins UU5.Forms.TextInputMixin 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea default props UU5.Forms.TextArea check default props 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props autoResize=false 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props autoResize=true 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      autoResize={true}
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props autocompleteItems=undefined 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props className="my-classname" 1`] = `
<div
  className="uu5-forms-text-area my-classname uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props className="test-classname" 1`] = `
<div
  className="uu5-forms-text-area test-classname uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props colorSchema="brown" 1`] = `
<div
  className="color-schema-brown uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="brown"
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props colorSchema="brown-rich" 1`] = `
<div
  className="color-schema-brown-rich uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="brown-rich"
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props colorSchema="cyan" 1`] = `
<div
  className="color-schema-cyan uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="cyan"
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props colorSchema="cyan-rich" 1`] = `
<div
  className="color-schema-cyan-rich uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="cyan-rich"
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props colorSchema="default" 1`] = `
<div
  className="color-schema-default uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="default"
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props colorSchema="green" 1`] = `
<div
  className="color-schema-green uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="green"
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props colorSchema="green-rich" 1`] = `
<div
  className="color-schema-green-rich uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="green-rich"
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props colorSchema="grey" 1`] = `
<div
  className="color-schema-grey uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="grey"
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props colorSchema="grey-rich" 1`] = `
<div
  className="color-schema-grey-rich uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="grey-rich"
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props colorSchema="orange" 1`] = `
<div
  className="color-schema-orange uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="orange"
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props colorSchema="orange-rich" 1`] = `
<div
  className="color-schema-orange-rich uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="orange-rich"
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props colorSchema="pink" 1`] = `
<div
  className="color-schema-pink uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="pink"
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props colorSchema="pink-rich" 1`] = `
<div
  className="color-schema-pink-rich uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="pink-rich"
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props colorSchema="purple" 1`] = `
<div
  className="color-schema-purple uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="purple"
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props colorSchema="purple-rich" 1`] = `
<div
  className="color-schema-purple-rich uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="purple-rich"
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props colorSchema="red" 1`] = `
<div
  className="color-schema-red uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="red"
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props colorSchema="red-rich" 1`] = `
<div
  className="color-schema-red-rich uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="red-rich"
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props colorSchema="yellow" 1`] = `
<div
  className="color-schema-yellow uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="yellow"
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props colorSchema="yellow-rich" 1`] = `
<div
  className="color-schema-yellow-rich uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      colorSchema="yellow-rich"
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props controlled=false 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props controlled=true 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props default props 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props disabled=false 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props disabled=false 3`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props disabled=true 1`] = `
<div
  className="uu5-forms-text-area uu5-common-disabled uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={true}
    readonly={false}
  >
    <text-input
      disabled={true}
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props disabled=true 3`] = `
<div
  className="uu5-forms-text-area uu5-common-disabled uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={true}
    readonly={false}
  >
    <text-input
      disabled={true}
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props feedback="error" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-error uu5-forms-input-icon"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="error"
    readonly={false}
  >
    <text-input
      feedback="error"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props feedback="initial" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props feedback="loading" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-loading uu5-forms-input-icon uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="loading"
    readonly={false}
  >
    <text-input
      disabled={true}
      feedback="loading"
      id="uuID-input"
      key="input"
      loading={true}
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props feedback="success" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-success uu5-forms-input-icon"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="success"
    readonly={false}
  >
    <text-input
      feedback="success"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props feedback="warning" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-warning uu5-forms-input-icon"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="warning"
    readonly={false}
  >
    <text-input
      feedback="warning"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props focusMessage="Bedlivě hlídám co píšete." 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props fullTextSearchPriority=0 1`] = `
<div
  className="uu5-forms-text-area uu-fulltextsearch-0 uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props fullTextSearchPriority=0 2`] = `
<div
  className="uu5-forms-text-area uu-fulltextsearch-0 uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props function -> InputMixin onChange() 1`] = `
<TextArea
  id="checkID"
  label="Your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.TextArea props function -> InputMixin onChange() 2`] = `
<TextArea
  feedback="success"
  id="checkID"
  label="Your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="Testing react in jest"
/>
`;

exports[`UU5.Forms.TextArea props function -> InputMixin onChangeFeedback() 1`] = `
<TextArea
  id="checkID"
  label="Your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.TextArea props function -> InputMixin onChangeFeedback() 2`] = `
<TextArea
  feedback="success"
  id="checkID"
  label="Your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="Testing react in jest"
/>
`;

exports[`UU5.Forms.TextArea props function -> InputMixin onValidate() 1`] = `
<TextArea
  id="checkID"
  label="Your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.TextArea props function -> InputMixin onValidate() 2`] = `
<TextArea
  feedback="success"
  id="checkID"
  label="Your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="Testing react in jest"
/>
`;

exports[`UU5.Forms.TextArea props function -> Text.InputMixin onBlur() 1`] = `
<TextArea
  id="checkID"
  label="Your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.TextArea props function -> Text.InputMixin onBlur() 2`] = `
<TextArea
  feedback="success"
  id="checkID"
  label="Your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="Testing react in jest"
/>
`;

exports[`UU5.Forms.TextArea props function -> Text.InputMixin onEnter() 1`] = `
<TextArea
  id="checkID"
  label="Your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.TextArea props function -> Text.InputMixin onEnter() 2`] = `
<TextArea
  feedback="success"
  id="checkID"
  label="Your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="Testing react in jest"
/>
`;

exports[`UU5.Forms.TextArea props function -> Text.InputMixin onFocus() 1`] = `
<TextArea
  id="checkID"
  label="Your name"
  message=""
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
/>
`;

exports[`UU5.Forms.TextArea props function -> Text.InputMixin onFocus() 2`] = `
<TextArea
  feedback="success"
  id="checkID"
  label="Your name"
  message="Is valid."
  onBlur={[Function]}
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onEnter={[Function]}
  onFocus={[Function]}
  onValidate={[Function]}
  validateOnChange={true}
  value="Testing react in jest"
/>
`;

exports[`UU5.Forms.TextArea props function -> Text.InputMixin validateOnChange() - input is invalid 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-error uu5-forms-input-icon"
  id="uuID"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Description"
    for="uuID-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="error"
    message="Not valid."
    readonly={false}
  >
    <text-input
      feedback="error"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props function -> Text.InputMixin validateOnChange() - input is valid 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-success uu5-forms-input-icon"
  id="uuID"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Description"
    for="uuID-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="success"
    message="Is valid."
    readonly={false}
  >
    <text-input
      feedback="success"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="Text in the textArea."
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props hidden=false 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props hidden=false 3`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props hidden=true 1`] = `
<div
  className="uu5-forms-text-area uu5-common-hidden uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props hidden=true 3`] = `
<div
  className="uu5-forms-text-area uu5-common-hidden uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props id="myId" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="myId"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="myId-input"
      key="input"
      mainAttrs={Object {}}
      name="myId-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props id="test-id" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="test-id"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="test-id-input"
      key="input"
      mainAttrs={Object {}}
      name="test-id-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props inputAttrs={"type":"email","width":"150px"} 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={
        Object {
          "type": "email",
          "width": "150px",
        }
      }
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props inputColWidth="xs12 s6 m8 l9" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props inputColWidth="xs12 s9" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props label="Your personal email" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Your personal email"
    for="uuID-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props labelAlignment="xs-left s-right" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props labelAlignment="xs-right s-left" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props labelColWidth="xs12 s3" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props labelColWidth="xs12 s6 m4 l3" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props mainAttrs=undefined 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props maxRows=3 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      maxRows={3}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props message="Your password is too short!" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    message="Your password is too short!"
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props name="myName" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="myName"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props nestingLevel="box" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props nestingLevel="inline" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-inline uu5-forms-input-auto-width"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      inputWidth="auto"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props noPrint=false 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props noPrint=true 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props patternMessage="Hodnota inputu není validní." 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props placeholder="Prosím vyplňte požadované pole .." 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Prosím vyplňte požadované pole .."
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props placeholder="např.: +420 000 000 000" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="např.: +420 000 000 000"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props pureRender=false 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props pureRender=true 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props readOnly=false 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props readOnly=true 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-read-only"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={true}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={true}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props required=false 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props required=true 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-icon"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    required={true}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props requiredMessage="Bez tohoto pole se nehnete dál." 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props rows=10 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={10}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props selected=false 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props selected=true 1`] = `
<div
  className="uu5-forms-text-area uu5-common-selected uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props size="l" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-l uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      size="l"
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props size="m" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props size="s" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      size="s"
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props style={"margin":8} 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props tooltip="My Tooltip" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextArea props value="Hodnota" 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="uuID-input"
      key="input"
      mainAttrs={Object {}}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="Hodnota"
    />
  </InputWrapper>
</div>
`;
